# HollyGraphics

./: .gitattributes  .gitmodules  Cargo.toml  vertex.frag  vertex.vert
engine/: Cargo.toml  untitled.fbx
engine/src/: lib.rs  main.rs  object.rs
engine/src/app/: mod.rs  object.rs
engine/src/components/: mod.rs  models.rs  object.rs  rendersystem.rs  scene.rs
engine/src/components/collision/: mod.rs  point.rs
engine/src/components/collisions/: collider.rs  collision_system.rs  mod.rs  point.rs  simplex.rs
engine/src/components/physics/: mod.rs  physics_system.rs  rigidbody.rs
engine/src/components/rendering/: mod.rs  models.rs  rendersystem.rs
engine/src/motor/: device_manager.rs  mod.rs  scene_manager.rs  system_manager.rs
graphics/: Cargo.toml  README.md  run.bat  vertex3normaluv.frag  vertex3normaluv.vert
graphics/shaders/: vertex3normaluv.frag.spv  vertex3normaluv.vert.spv
graphics/src/: main.rs
mofongo/: Cargo.toml
mofongo/src/: bodies.rs  collider.rs  lib.rs  main.rs
puraexpr/: Cargo.toml
puraexpr/src/: main.rs
retrato/: Cargo.toml
retrato/src/: main.rs
shaders/: vertex.frag.spv  vertex.vert.spv
src/: main.rs
src/app/: basic.rs  mod.rs  models.rs
src/buffer/: mod.rs  raw.rs
src/device/: instance.rs  mod.rs
src/holly_types/: batch.rs  mod.rs  model.rs  transform.rs  vertex.rs
src/lin_alg/: f32.rs
winarabica/: Cargo.toml
winarabica/src/: lib.rs  main.rs
winarabica/src/implementation/: mod.rs
winarabica/src/implementation/win32/: mod.rs  state.rs
winarabica/src/inputs/: mod.rs
winarabica/src/window/: mod.rs
(+91 files in other folders)
