[package]
name = "holly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.2+1.3.238", features = ["linked", "debug"]}
ash-window = "0.12.0"
winit = "0.28.6"
raw-window-handle = "0.5.2"
bytemuck = "1.13.1"
libc = "0.2.144"

[profile.dev]
opt-level = 1 

[profile.release]
opt-level = 3

# [build]
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]