[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.2", features = ["linked", "debug"] }
drowsed_math = { path="../drowsed_math/" }
yum_mocha = { path="../yum_mocha/" }
winit = "0.28.6"
num-traits = "0.2.15"
