[package]
name = "winarabica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5.2"
wchar = "0.11.0"

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Foundation", 
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
]